# qt-pimpl-example

./: .gitignore  Animal.cpp  Animal.hpp  Animal_p.hpp  Bird.cpp  Bird.hpp  CMakeLists.txt  Dog.cpp  Dog.hpp  Pimpl.hpp  README.md  test_pimpl.cpp
